--- a/css/calendar.formula-one.css
+++ b/css/calendar.formula-one.css
@@ -208,7 +208,7 @@
 }
 
 .formula-one #date-weather-container::before {
-    content: "F1 CALENDAR";
+    content: "F1 SEASON RACE";
     position: absolute;
     top: -10px;
     right: 20px;
