--- a/css/calendar.bora-bora.css
+++ b/css/calendar.bora-bora.css
@@ -182,7 +182,7 @@
 }
 
 .bora-bora #date-weather-container::before {
-    content: "ISLAND CALENDAR";
+    content: "🌴 POLYNESIAN WEATHER OVERVIEW";
     position: absolute;
     top: -10px;
     right: 20px;
